Refactor update user